--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <header class="header">
 <nav>
-    <h2 class="nav title">Ma<span class="text-primary">r</span>y</h2>
+    <h2 class="nav title">Dia<span class="text-primary">n</span>a</h2>
 <ul>
     <li>Portfolio</li>
     <li>Blogs</li>
@@ -24,11 +24,11 @@
 <div class="banner">
 <div>
   <h3 class="banner-sub-title">Hi,I am</h3>
-  <h1 class="banner-title">Hardy Mary</h1>
-  <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+  <h1 class="banner-title">Namphy Diana</h1>
+  <p class="banner-description">Chose hard work over luck</p>
   <button class="btn-primary">Download CV</button>
 </div>
-  <img src="images/hardy.png" alt="Mary">
+  <img src="images/mypic.jpg" height="500" width="450" alt="Diana">
 </div>
 </header>
 <main>
@@ -51,11 +51,119 @@
             <div class="about-info"
           <p class="info-title">Location:</p>
           <p class="info-description">Dhaka,Bangladesh</p>
-            </div>
-
-
+            </div></section>
+<!--What i do section-->
+<section>
+  <h3 class="what-i-do">What I do</h3>
+  <!--.skills-container>.skills*4>img+p.skill-title+p.skill-description>lorem15-->
+  <div class="skills-container">
+    <div class="skills">
+      <img src="images/icons/js.png" alt="js">
+      <p class="skill-title">Vanilla Javascript</p>
+      <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste nesciunt fugiat velit ab praesentium vitae.</p>
     </div>
+    <div class="skills">
+      <img src="images/icons/react.png" alt="react">
+      <p class="skill-title">React</p>
+      <p class="skill-description">Vel, in distinctio adipisci culpa soluta fuga minus magnam repellendus accusantium deleniti optio, hic voluptatibus!</p>
+    </div>
+    <div class="skills">
+      <img src="images/icons/nodejs.png" alt="node js">
+      <p class="skill-title">Node JS</p>
+      <p class="skill-description">Quae ipsa accusantium at laborum recusandae culpa soluta architecto modi ab iure, exercitationem aspernatur aliquid.</p>
+    </div>
+    <div class="skills">
+      <img src="images/icons/mongo.png" alt="mongodb">
+      <p class="skill-title">Mongodb</p>
+      <p class="skill-description">Quaerat, ipsam! Beatae, explicabo. Ipsa mollitia nemo accusantium, rerum sequi tempore quis deleniti a nam?</p>
+    </div>
+  </div>
 </section>
+<!--Resumer section-->
+<section class="resume">
+  <h3 class="section-title">A summary of my resume</h3>
+  <div class="resume-content">
+    <div>
+      <h3 class="resume-title">My Education</h3>
+    </div>
+    <div class="resume-item">
+      <h4 class="title">Masters in Computer Engineering</h4>
+      <h5 class="sub-title">Harvard University / 2015-2017</h5>
+      <p class="description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+    </div>
+    <hr>
+    <div class="resume-item">
+      <h4 class="title">Masters in Computer Engineering</h4>
+      <h5 class="sub-title">Harvard University / 2015-2017</h5>
+      <p class="description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+    </div>
+    <hr>
+    <div class="resume-item">
+      <h4 class="title">Masters in Computer Engineering</h4>
+      <h5 class="sub-title">Harvard University / 2015-2017</h5>
+      <p class="description">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+    </div>
+    <hr>
+    <div>
+      <h3 class="resume-title">My Experience</h3>
+      <div class="resume-item">
+        <h4 class="title">Masters in Computer Engineering</h4>
+        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+        <p class="description">List skill/technologies here. You can change the icon above 
+          to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+      </div>
+      <hr>
+      <div class="resume-item">
+        <h4 class="title">Masters in Computer Engineering</h4>
+        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+        <p class="description">List skill/technologies here. You can change the icon above 
+          to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+      </div>
+      <hr>
+      <div class="resume-item">
+        <h4 class="title">Masters in Computer Engineering</h4>
+        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+        <p class="description">List skill/technologies here. You can change the icon above 
+          to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+      </div>
+  
+    </div>
+  
+<div class="resume-button">
+  <button class="btn-primary">Download CV</button>
+</div>
+</div>
+<!--Contact section-->
+<class="contact">
+  <div>
+<h3 class="section-title">Let's connect</h3>
+<p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+<a href=""></a>
+<img src="images/icons/facebook.png" alt="">
+<img src="images/icons/twitter.png" alt="">
+<img src="images/icons/insta.png" alt="">
+  </div>
+  <div>
+<h3 class="section-title">Let's message me</h3>
+  
+<form action="">
+  <input type="text" name="" id="" placeholder="Your Name">
+  <input type="email" name="" id="" placeholder="Your Email">
+  <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+<input class="btn-primary" type="submit" value="Submit">
+</form>
+
+</div>
+
+</section>
+
+
+</section>
+    </div>
+
 </main>
 <footer>
     
